그 외 질문 추가

--- a/이것이 취업을 위한 컴퓨터 과학이다/4. Data Structure/yj/자료구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/4. Data Structure/yj/자료구조.md
@@ -234,3 +234,6 @@ Union-Find로 cycle 여부 판단
 17. `DFS`와 `BFS`는 각각 어떤 자료구조로 구현되며, 어떤 상황에 적합한가요?
 18. `Kruskal`과 `Prim` 알고리즘의 차이는 무엇인가요?
 19. 최소 신장 트리를 구하는 알고리즘들의 시간복잡도는 어떻게 되나요?
+
+### 그 외
+20. `Trie` 자료구조는 무엇인가요? 어떤 경우에 사용하나요?
