--- a/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/mc/CH04_자료구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/mc/CH04_자료구조.md
@@ -2,12 +2,10 @@
 
 - [시간복잡도와 공간복잡도](#시간-복잡도와-공간-복잡도)
 - [Array](#array)
-- [Stack and Queue](#stack과-queue)
+- [Stack과 Queue](#stack과-queue)
 - [Tree](#tree)
-- [Binary Heap]()
-- [Red Black Tree]()
-- [Hash Table]()
-- [Graph]()
+- [Hash Table](#hash-table)
+- [Graph](#graph)
 
 ## 📌 핵심 개념 요약
 
