--- a/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/mc/CH04_자료구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/mc/CH04_자료구조.md
@@ -39,7 +39,7 @@
 이 인덱스로 배열의 요소를 식별할 수 있다.
 `인덱스를 통해 요소를 검색하거나 값을 재할당`하는 것에는 `O(1)`의 시간복잡도를 가진다. 그러나 `요소를 삭제하거나 삽입`하는 경우 기존요소의 재배치가 발생하므로 `O(n)`의 시간복잡도를 가진다.
 
-이러한 단점을 보완할 수 있는 자료구조가 `연결 리스트(Linked Array)`이다. 연결리스트는 각 요소들이 자신의 값과 함께 다음 원소의 주소값을 함께 가지고 있다. 따라서 어떠한 요소를 삽입하거나 삭제할 경우 `O(1)`의 시간복잡도를 가지게 된다. 그러나, 특정 위치에 요소를 삽입하고자 할 경우에는 처음 요소부터 차례대로 조회해야하므로 `O(n)`의 시간복잡도를 가지게 된다는 단점이 있다.
+이러한 단점을 보완할 수 있는 자료구조가 `연결 리스트(Linked list)`이다. 연결리스트는 각 요소들이 자신의 값과 함께 다음 원소의 주소값을 함께 가지고 있다. 따라서 어떠한 요소를 삽입하거나 삭제할 경우 `O(1)`의 시간복잡도를 가지게 된다. 그러나, 특정 위치에 요소를 삽입하고자 할 경우에는 처음 요소부터 차례대로 조회해야하므로 `O(n)`의 시간복잡도를 가지게 된다는 단점이 있다.
 
 ### Stack과 Queue
 
@@ -193,7 +193,7 @@ Union-Find 초기화 및 처리: O(E)
 ## 💡 면접 예상 질문
 
 - 빅오 표기법(Big O Notation)이란 무엇인가요?
-- Array와 Linked array의 차이점을 설명해주세요.
+- Array와 Linked list의 차이점을 설명해주세요.
 - Stack과 Queue의 차이를 설명해주세요.
 - 해시테이블이 무엇인지와 시간 복잡도에 대해서 설명해주세요
 - Tree와 Graph의 차이를 설명해주세요.
