자료구조 정리

--- a/이것이 취업을 위한 컴퓨터 과학이다/4. Data Structure/cw/CH04_자료구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/4. Data Structure/cw/CH04_자료구조.md
@@ -1,1 +1,126 @@
-test
+# CH04. 자료 구조
+
+## 📌 핵심 개념 요약
+### 1. 배열
+
+- 일정한 메모리 공간을 차지하는 여러요소 들이 순차적으로 나열된 자료구조
+- **배열의 특징**
+  1. 연속된 메모리 할당
+     - 배열은 연속된 메모리공간을 차지한다.
+     - 인덱스를 이용한 임의접근이 가능하다. (O(1) 시간복잡도)
+     - 배열의 첫번째 요소의 주소를 기준주소(Base Address)라고 한다. (첫 주소 이후의 나머지 요소들의 주소는 기준주소의 자료형 크기만큼의 위치에 있기 때문)
+  2. 고정된 크기
+     - 배열의 크기는 선언시 고정된다.
+     - 동적으로 크기를 변경할 수 없는 정적 자료구조이다.
+  3. 순차적 데이터 저장
+     - 데이터는 순서를 가지며 저장되고 중복된 값이 저장가능하지만 순서는 유지된다.
+  4. 인덱스를 이용한 접근
+     - 특정 인덱스를 통해 O(1)의 시간복잡도로 원소에 접근 가능하다.
+
+### 2. 연결리스트
+
+- 노드의 모음으로 구성된 자료구조
+- **연결리스트 특징**
+  1. 노드들이 포인터로 연결되어 저장됨
+     - 삽입/삭제가 빠르지만 O(1) 접근속도가 느림 O(n)
+     - 배열은 기준주소 + 자료형 * 인덱스로 접근해서 접근속도가 빠르지만 연결리스트는 노드의 포인터를 따라가야 하기 때문에 접근속도가 느리다. 
+     but 포인터만 변경해주면 값을 삽입/삭제를 할수 있기 때문에 삽입/삭제는 배열에 비해 빠름
+
+### 3. 스택
+
+- 스택은 한쪽에서만 데이터의 삽입 및 삭제가 가능한 자료구조(LIFO 후입선출)
+- **스택의 종류**
+  1. 배열 기반 스택
+     - 배열을 이용해여 스택을 구현
+     - 고정된 크기를 가지며, 크기를 초과하면 오버플로 발생.
+     - 고정된 크기로 인해 메모리 낭비가 심할수 있다.
+         ```
+         stack = [10, 20, 30, 40]
+         TOP = 3  # 40이 최상위 요소
+         ```
+     - 연산수행 
+          ```
+          PUSH(50) → stack = [10, 20, 30, 40, 50]  (TOP = 4)
+          POP() → stack = [10, 20, 30, 40]  (TOP = 3, 반환값: 50)
+          ```
+     
+  2. 연길리스트 기반 스택
+     - 동적 크기를 가지며, 메모리 효울적
+     - 노드를 사용하여 데이터와 포인터를 저장
+     - 삽입및 삭제가 O(1) 시간복잡도로 매우 빠름
+       ```
+       TOP → [40] → [30] → [20] → [10]
+       ```
+     - 연산수행
+       ```
+        PUSH(50) → TOP → [50] → [40] → [30] → [20] → [10]
+        POP() → 반환값: 50, TOP → [40] → [30] → [20] → [10]
+        ```
+### 큐
+
+- 한쪽으로 데이터를 삽입하고, 다른 한 쪽으로 데이터를 삭제할 수 있는 자료구조(FIFO 선입 선출)
+- 큐의 한쪽끝에서 데이터를 삽입하는 연산을 인큐, 다른 한쪽끝으로 데이터를 삭제하는 연산을 디큐라고 함
+- 덱은 양방향 큐의 약자로, 양쪽으로 데이터를 삽입 삭제 할수 있는 큐
+- 우선순위큐는 정해진 우선순위가 높은 순으로 처리되는 큐(힙으로 구현되어있음)
+- 원형 큐는 데이터를 삽입하는 쪽과 삭제하는쪽, 양쪽을 하나로 연결해 원형으로 사용하는 자료구조
+    - 고정된 크기를 가지며, 공간을 효율적으로 사용하기 위해 벼열의 시작과 끝을 연결하는 구조이다.
+    - 배열로 구현되며 rear가 마지막 인덱스에 도착하면 rear 를 0으로 설정해 메모리를 효율적으로 사용 가능
+
+### 해시테이블
+
+- 해시테이블은 키와 값의 대응으로 이루어진 표와 같은 형태의 자료구조
+
+### 트리
+
+- 트리는 그래프의 한 종류로, 특정한 구조적 특징을 가지는 비순환 연결 그래프 이다.
+-  **트리의 특징**
+    1. 트리에서 하나의 간선을 추가하면 반드시 사이클이 생긴다.
+    2. 트리에서 하나의 간선을 제거하면 그래프가 분리된다.
+    3. 트리에서 임의의 두 정점간의 최단 경로는 유일하다.
+    4. 임의의 트리는 항상 최소신장 트리이다.
+       - 가중치가 없는 그래프에서, 트리는 항상 가장 적은 간선 수로 모든 정점을 연결하는 최소 신장 트리 역할을 한다.
+- **트리의 유형**
+  1. 루트 트리
+     - 특정한 정점을 루트로 지정한 트리
+     - 루트에서부터 하위 정점들로 방향성이 암시적으로 부여된다.
+     - 깊이와 높이의 개념이 적용된다.
+  2. 이진트리
+     - 각 노드가 최대 두개의 자식을 가질수있는 트리
+     - 일반적인 트리와 달리, 구조를 보다 체계적으로 분석하는 데 유용
+  3. 균형 트리
+    - 트리의 높이가 정도로 유지되도록 균형을 맞춘 트리
+    - AVL트리, 레드-블랙 트리 등이 있다.
+  4. 완전 이진트리
+    - 마지막 레벨을 제외한 모든 레벨이 완전히 채워져 있으며, 마지막 레벨의 노드는 왼쪽부터 채워진 이진트리
+  5. 이진탐색 트리
+    - 왼쪽 서브트리에는 현재 노드보다 작은값이, 오른쪽 서비ㅡ리에는 현재 노드보다 큰값이 존재하는 트리
+### 그래프
+
+- 정점이라 불리는 데이터를 간선 혹은 링크로 연결한 형태의 자료구조
+
+
+## 💡 면접 예상 질문
+
+- 배열과 연결 리스트의 차이점은 무엇인가요?
+- 배열에서 특정 인덱스에 접근하는 시간복잡도는 왜 O(1)인가요?
+- 배열은 삽입/삭제 시 어떤 단점이 있나요?
+
+- 연결 리스트에서 특정 인덱스의 값을 찾는 데 시간이 오래 걸리는 이유는?
+- 연결 리스트에서 중간 노드를 삭제할 때 필요한 과정은?
+- 단일 연결 리스트와 이중 연결 리스트의 차이점은 무엇인가요?
+
+- 스택은 어떤 상황에서 유용하게 쓰이나요? (예: 재귀, 괄호 검사 등)
+- 배열 기반 스택과 연결 리스트 기반 스택의 장단점을 비교해주세요.
+
+- 후입선출(LIFO)이 중요한 알고리즘이나 문제의 예시는?
+- 큐는 어떤 경우에 사용되나요? (예: 프로세스 스케줄링 등)
+- 원형 큐를 사용하는 이유는?
+- 덱(Deque)과 일반 큐의 차이점은?
+- 우선순위 큐는 어떻게 동작하고, 어떤 자료구조로 구현되나요?
+
+
+## ❓스터디에서 논의하고 싶은 질문
+- 1
+
+## 🔗 참고 자료
+- [CS 정리 블로그](https://example.com)
