--- a/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/yj/CH02_컴퓨터구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/yj/CH02_컴퓨터구조.md
@@ -46,10 +46,100 @@
 2. 비동기 인터럽트 (하드웨어 인터럽트)
  - 입출력장치에 의해 발생하는 인터럽트
 
- ##### CPU의 하드웨어 인터럽트 처리 순서
- 1. 입출력장치는 CPU에게 인터럽트 요청 신호를 보낸다.
- 2. CPU는 실행 사이클이 끝나고 명령어를 인출하기 전에 항상 인터럽트 여부를 확인.
- 3. CPU는 인터럽트 요청을 확인하고, 인터럽트 플래그를 통해 현재 인터럽트를 받아들일 수 있는지 여부 확인
- 4. 인터럽트를 받아들일 수 있다면 CPU가 현재까지 작업 백업
- 5. CPU는 인터럽트 벡터를 참조하여 인터럽트 서비스 루틴을 실행
- 6. 인터럽트 서비스 루틴 실행이 끝나면 작업을 복구하여 실행을 재개
+##### CPU의 하드웨어 인터럽트 처리 순서
+1. 입출력장치는 CPU에게 인터럽트 요청 신호를 보낸다.
+2. CPU는 실행 사이클이 끝나고 명령어를 인출하기 전에 항상 인터럽트 여부를 확인.
+3. CPU는 인터럽트 요청을 확인하고, 인터럽트 플래그를 통해 현재 인터럽트를 받아들일 수 있는지 여부 확인
+4. 인터럽트를 받아들일 수 있다면 CPU가 현재까지 작업 백업
+5. CPU는 인터럽트 벡터를 참조하여 인터럽트 서비스 루틴을 실행
+6. 인터럽트 서비스 루틴 실행이 끝나면 작업을 복구하여 실행을 재개
+
+##### 인터럽트 서비스 루틴 (인터럽트 핸들러)
+- 인터럽트를 처리하기 위한 프로그램
+- 인터럽트가 발생했을 때 해당 인터럽트를 어떻게 처리하고 작동해야 할지에 대한 정보
+
+##### 인터럽트 벡터
+- 인터럽트 서비스 루틴을 식별하기 위한 정보
+
+##### CPU가 인터럽트를 처리한다는 것은?
+- 인터럽트 서비스 루틴을 실행하고 본래 작업으로 다시 돌아오는 것
+- 인터럽트 서비스 루틴의 시작 주소를 알아야하며, 이는 `인터럽트 벡터`를 통해 알 수 있음.
+
+#### CPU 성능 향상 기법
+1. CPU 클럭 속도 향상
+ - 필요 이상으로 높이면 발열이 높아짐
+2. 멀티코어와 멀티스레드
+ - 코어
+  - CPU 내에서 명령을 읽어 들이고, 해석하고, 실행하는 부품
+ - 스레드 (논리 프로세서)
+  - 하나의 코어가 동시에 처리하는 명령어의 단위 
+
+#### 하드웨어 스레드와 소프트웨어 스레드의 차이
+- 하드웨어 스레드는 병렬성 (물리적 실행 단위)
+- 소프트웨어 스레드는 동시성 (논리적 실행 단위)
+
+#### CISC, RISC 차이
+- CISC
+ - 다채로운 기능을 지원하는 복잡한 명령어들로 이루어짐
+ - 명령어의 기능이 복잡하고, 다양한 기능을 제공하기에 시간이 일정하지 않고, 실행에 따라 여러 클럭 주기가 필요함.
+- RISC
+ - 활용 가능한 명령어의 개수가 적음
+ - 크기가 규격화 되어있음.
+ - 하나의 명령어가 1클럭 내외로 실행됨.
+
+ #### 파이프라인 위험
+ 1. 데이터 위험
+  - 데이터 의존성에 의해 발생함.
+ 2. 제어 위험
+  - 프로그램 카운터의 갑작스러운 변화에 의해 발생함.
+ 3. 구조적 위험
+  - 서로 다른 명령어가 동시에 ALU, 레지스터 등 같은 CPU 부품을 사용하려고 할 때 발생.
+
+### 메모리
+- 휘발성 저장장치임
+
+#### DRAM
+- 시간이 지나면 저장된 데이터가 점차 사라지는 RAM
+
+#### SRAM
+- Static RAM으로, 시간이 지나도 저장된 데이터가 사라지지 않음.
+- 전원 공급이 이루이지지 않으면 내용은 소실됨.
+
+#### SDRAM
+- 클럭 신호와 동기화 된 발전된 형태의 DRAM
+
+#### DDR SDRAM
+- 대역폭을 넓혀 속도를 빠르게 만든 SDRAM
+
+#### 캐시 메모리
+- CPU의 연산 속도와 메모리 접근 속도의 차이를 줄이기 위한 저장장치
+- L1, L2, L3 캐시가 있으며 L1, L2 캐시는 메모리 내부에, L3 캐시는 코어 외부에 있음.
+
+### 보조기억장치와 입출력장치
+
+#### RAID
+- 하드 디스크 드라이브 (HDD)
+- 플래시 메모리 기반 저장장치 (SSD)
+
+#### RAID0
+- 데이터를 여러 보조기억장치에 단순하게 나누어 저장하는 방식
+- 스트라이핑 저장 방식 사용
+- 저장된 정보가 안전하지 않음
+
+#### RAID1
+- 복구가 간단하고 안정성이 높음
+- 사용량이 작아짐.
+
+#### RAID4
+- 페리티 정보를 저장하는 디스크를 따로 구성함
+- 병목현상이 발생할 수 있음
+![RAID4](RAID4.png)
+
+#### RAID5
+- 페리티 정보를 분산하여 저장하는 방식
+![RAID5](RAID5.png)
+
+#### RAID6
+- RAID5와 같지만, 서로 다른 2개의 페리티를 두는 구성 방식
+- RAID5에 비해 쓰기 속도는 일반적으로 느림
+![RAID6](RAID6.png)
