--- a/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/yj/CH02_컴퓨터구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/yj/CH02_컴퓨터구조.md
@@ -87,13 +87,16 @@
  - 크기가 규격화 되어있음.
  - 하나의 명령어가 1클럭 내외로 실행됨.
 
- #### 파이프라인 위험
- 1. 데이터 위험
-  - 데이터 의존성에 의해 발생함.
- 2. 제어 위험
-  - 프로그램 카운터의 갑작스러운 변화에 의해 발생함.
- 3. 구조적 위험
-  - 서로 다른 명령어가 동시에 ALU, 레지스터 등 같은 CPU 부품을 사용하려고 할 때 발생.
+### 파이프라이닝
+- 명령어를 동시에 여러 단계로 나누어 처리
+
+#### 파이프라인 위험
+1. 데이터 위험
+ - 데이터 의존성에 의해 발생함.
+2. 제어 위험
+ - 프로그램 카운터의 갑작스러운 변화에 의해 발생함.
+3. 구조적 위험
+ - 서로 다른 명령어가 동시에 ALU, 레지스터 등 같은 CPU 부품을 사용하려고 할 때 발생.
 
 ### 메모리
 - 휘발성 저장장치임
@@ -143,3 +146,35 @@
 - RAID5와 같지만, 서로 다른 2개의 페리티를 두는 구성 방식
 - RAID5에 비해 쓰기 속도는 일반적으로 느림
 ![RAID6](RAID6.png)
+
+#### 입출력 기법
+
+##### 장치 드라이버
+- 장치 컨트롤러의 동작을 알고, 컨트롤러가 컴퓨터 내부와 정보를 주고받을 수 있도록 하는 프로그램
+
+##### 프로그램 입출력
+- 프로그램 속 명령어로 입출력 작업을 수행하는 방법
+
+##### 인터럽트 기반 입출력 (다중 인터럽트)
+다중 인터럽트란, **한 인터럽트를 처리하는 도중에 또 다른 인터럽트가 발생하는 경우**를 말합니다.
+
+### 1. **인터럽트 우선순위(Priority) 방식**
+* 각 인터럽트에 \*\*우선순위(priority)\*\*를 지정하여 처리 순서를 결정
+* 더 높은 우선순위의 인터럽트가 발생하면 현재 인터럽트를 **일시 중단**하고 새로운 인터럽트를 처리함
+
+### 2. **인터럽트 마스킹(Interrupt Masking)**
+* 특정 인터럽트를 **일시적으로 무시하거나 막는 방식**
+* 우선순위가 낮은 인터럽트는 **마스크 비트 설정**으로 차단 가능
+* `CLI`(clear interrupt flag), `STI`(set interrupt flag) 명령어로 제어 (x86 기준)
+
+### 3. **중첩 인터럽트(Nested Interrupts)**
+* 현재 인터럽트를 처리하던 중, 더 높은 우선순위의 인터럽트가 오면 **현재 상태를 저장한 뒤** 새로운 인터럽트로 전환
+* 이후 **스택을 이용해 복구**하고 기존 작업을 이어서 처리
+
+#### DMA 입출력
+- 직접 메모리에 접근할 수 있는 입출력 기능
+
+##### 동작 방식
+1. CPU가 DMA 컨트롤러에게 입출력장치의 주소, 수행할 연산, 연산할 메모리 주소 등의 정보와 함께 입출력 작업을 명령
+2. DMA는 CPU 대신 장치 컨트롤러와 상호작용하여 입출력 작업을 수행한다.
+3. DMA 컨트롤러는 입출력 작업이 끝나면 CPU에게 인터럽트를 걸어 작업이 끝났음을 알림.
