--- a/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/yj/CH02_컴퓨터구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/yj/CH02_컴퓨터구조.md
@@ -178,3 +178,30 @@
 1. CPU가 DMA 컨트롤러에게 입출력장치의 주소, 수행할 연산, 연산할 메모리 주소 등의 정보와 함께 입출력 작업을 명령
 2. DMA는 CPU 대신 장치 컨트롤러와 상호작용하여 입출력 작업을 수행한다.
 3. DMA 컨트롤러는 입출력 작업이 끝나면 CPU에게 인터럽트를 걸어 작업이 끝났음을 알림.
+
+---
+
+## 💡 면접 예상 질문
+
+
+## ✅ 컴퓨터 구조
+
+### 📌 컴퓨터 구조
+
+1. `CPU`는 어덯게 구성되어 있나요?
+2. `캐시 메모리`는 무엇이고, 왜 존재하나요?
+3. `CPU 저장장치`의 계층 구조와 특징에 대해 설명해주세요
+
+### 📌 컴퓨터가 이해하는 정보
+
+4. `0.1 + 0.2 == 0.3`이 성립하지 않는 이유와 극복 방안에 대해 말씀해주세요.
+5. `Base 64`인코딩 기법에 대해 설명해주세요.
+
+### 📌 CPU
+
+6. `레지스터`의 종류와 용도에 대해 알려주세요.
+7. 여러가지 하드웨어의 요청을 동시에 처리할 수 있는 이유는 무엇인가요? `하드웨어 인터럽트`
+
+### 📌 파이프 라이닝
+
+8. `CISC`, `RISC` 차이점에 대해 설명해주세요.
