--- a/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/mj/CH02_컴퓨터구조.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/2. Computer Architecture/mj/CH02_컴퓨터구조.md
@@ -8,6 +8,20 @@
 - 메모리 (RAM, 빅 엔디안과 리틀 엔디안, 캐시 메모리)
 - 보조기억장치와 입출력장치
 
+## 💡 면접 예상 질문
+
+- 부동소수점이라는 용어의 뜻은 무엇인가요?
+- 프로그래밍 언어에서 0.1+0.2라는 값과 0.3이라는 값을 비교했을 때 같지 않다는 오차가 발생하는 원인에 대해서 설명해주세요.
+- 아스키코드, EUC-KR, 유니코드에 대한 간단한 설명과 두드러진 차이점 한가지를 설명해주세요
+- ‘abc’라는 문자열을 base64 방식으로 인코딩하는 과정을 간단하게 설명해주세요.(힌트: 아스키코드 a,b,c는 각각 97,98,99)
+  - 이때 6비트씩 나누어떨어지지 않는다면?
+- 명령어 집합인 CISC와 RISC의 차이점을 설명해주세요.
+  - 둘 중에 파이프라이닝에 적합한 명령어집합은?
+- 파이프라인 위험의 종류 세가지를 설명해주세요.
+- 캐시 메모리는 무엇을 저장할까요?
+  - 그럼 CPU가 사용할 법한 것은 어떻게 예측하나요?
+- DMA 입출력 과정을 간단하게 설명해주세요.
+
 ## ❓스터디에서 논의하고 싶은 질문
 
 -
@@ -149,7 +163,7 @@ ex) 부호 플래그, 제로 플래그, 캐리 플래그, 오버플로우 플래
   2. 명령어 해석
   3. 명령어 실행
   4. 결과 저장
-  같은 단계가 겹치지만 않는다면 CPU가 각각의 단계를 동시에 실행할 수 있다.
+     같은 단계가 겹치지만 않는다면 CPU가 각각의 단계를 동시에 실행할 수 있다.
 - 슈퍼스칼라: CPU 내부에 여러 ㅁ여령어 파이프라인을 포함하는 구조
 - CISC와 RISC
 
