운영체제(1) 면접 예상 질문 추가

--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
@@ -11,7 +11,24 @@
 
 ## 💡 면접 예상 질문
 
--
+### 📌 운영체제 개요
+
+- 운영체제의 핵심 역할은 무엇인가요?
+- 커널이란 무엇인가요?
+
+### 📌 프로세스 & 스레드
+
+- PCB가 무엇이고, 어떤 정보를 담고있나요?
+- 메모리 누수가 무엇이고, 해결 방법은 무엇인가요?
+  - 본인이 사용해봤던 언어에는 가비지 컬렉션이 있나요?
+- 실행 상태에서 갈 수 있는 상태를 말씀해주시고, 각 상황을 설명해주세요
+  - 대기 상태였던 프로세스가 다시 실행 가능한 상태가 되면 프로세스는 어떤 상태로 바뀌나요?
+- 멀티프로세스와 멀티스레드의 차이점을 설명해주세요
+
+### 📌 동기화와 교착상태
+
+- 세마포의 종류에 대해 설명해주세요
+- 모니터가 실행 순서 제어를 위해 동기화하는 과정을 설명해주세요
 
 ## ❓스터디에서 논의하고 싶은 질문
 
