--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제.md
@@ -126,3 +126,30 @@
   * 예방(Prevention) – 조건 중 하나 제거.
   * 회피(Avoidance) – 안전 상태 유지(Banker's Algorithm).
   * 탐지 및 회복 – 주기적으로 검사 후 해결.
+
+  ---
+
+## 💡 면접 예상 질문
+
+좋아요 👍
+아까 정리해드린 **운영체제의 큰 그림 \~ 교착 상태** 범위에서 모니터까지 포함해, **면접에서 나올 법한 질문 8개**를 추렸습니다.
+
+---
+
+## 📌 예상 면접 질문 8개
+
+1. 운영체제의 주요 역할에는 어떤 것들이 있나요?
+
+2. 시스템 콜(System Call)과 이중 모드(Dual Mode)의 개념과 관계를 설명해보세요.
+
+3. 프로세스와 스레드의 차이점을 메모리 구조 관점에서 설명하세요.
+
+4. 멀티프로세스와 멀티스레드의 장단점을 비교해보세요.
+
+5. IPC(프로세스 간 통신) 방식에는 어떤 것들이 있고, 각 방식의 특징은 무엇인가요?
+
+6. 임계 구역(Critical Section) 문제의 3가지 조건을 설명하세요.
+
+7. 뮤텍스(Mutex), 세마포어(Semaphore), 모니터(Monitor)의 차이점을 비교해보세요.
+
+8. 교착 상태(Deadlock)의 4가지 발생 조건과 이를 예방/회피하는 방법을 설명하세요.
