--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제.md
@@ -133,7 +133,7 @@
 
 1. 운영체제의 주요 역할에는 어떤 것들이 있나요?
 
-2. 시스템 콜과 이중 모드의 개념과 관계를 설명해보세요.
+2. 유저모드와 커널모드는 왜 분리되어 있나요?
 
 3. 프로세스와 스레드의 차이점을 메모리 구조 관점에서 설명하세요.
 
@@ -141,7 +141,7 @@
 
 5. IPC 방식에는 어떤 것들이 있고, 각 방식의 특징은 무엇인가요?
 
-6. 임계 구역 문제의 3가지 조건을 설명하세요.
+6. 스택 영역이 매우 크다면, 힙은 불필요할까요?
 
 7. 뮤텍스, 세마포어, 모니터의 차이점을 비교해보세요.
 
