--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제2.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제2.md
@@ -125,17 +125,17 @@
 
 # 📌 면접 질문
 
-1. **CPU 스케줄링에서 비선점형과 선점형의 차이를 설명해보세요.**
+1. **CPU 스케줄링에서 비선점형과 선점형의 차이, 그리고 그 종류를 설명해주세요.**
 
    * 선점형은 CPU를 뺏을 수 있고, 비선점형은 CPU를 자발적으로 반납해야 함.
 
 2. **Round Robin 스케줄링의 장점과 단점을 말해보세요.**
 
-   * 응답 시간을 보장하지만, Time Quantum이 너무 크면 FCFS와 비슷해지고 너무 작으면 문맥 전환 비용 증가.
+   * 응답 시간을 보장하지만, Time Quantum이 너무 크면 FCFS와 비슷해지고 너무 작으면 컨텍스트 스위칭 비용 증가.
 
-3. **리눅스의 CFS 스케줄러는 어떤 방식으로 공정성을 보장하나요?**
+3. **스케줄러 종류에 대해서 설명해주세요.**
 
-   * 가상의 실행 시간을 기록하여 CPU를 적게 사용한 프로세스에 우선권을 줌.
+   * 장기 스케줄러, 중기 스케줄러, 단기 스케줄러.
 
 4. **가상 메모리를 사용하는 이유는 무엇인가요?**
 
@@ -145,14 +145,15 @@
 
    * 페이징은 고정 크기 단위 분할(내부 단편화), 세그멘테이션은 논리 단위 분할(외부 단편화).
 
-6. **페이지 교체 알고리즘 중 LRU와 FIFO를 비교해보세요.**
+6. **페이지 교체 알고리즘에 대해서 설명해주세요.**
 
    * FIFO는 단순하지만 Belady’s Anomaly 가능, LRU는 실제 사용 패턴 반영하지만 구현 복잡.
 
-7. **파일 시스템에서 저널링(Journaling) 기법은 왜 필요한가요?**
+7. **스레싱에 대해서 설명해주세요.**
 
-   * 장애 발생 시 데이터 일관성을 유지하고 빠르게 복구 가능.
+   * 가상 메모리 시스템에서 페이지 폴트가 과도하게 발생해서 CPU가 실제 작업보다 페이지 교체에 더 많은 시간을 쓰는 현상.
 
-8. **파일 시스템에서 순차 접근과 직접 접근의 차이를 설명해보세요.**
+8. **파일을 옮기면 어떤 일이 일어나나요? 같은 파일 시스템, 다른 파일 시스템 기준으로 설명해주세요.**
 
-   * 순차 접근은 앞에서부터 차례대로 읽어야 하고, 직접 접근은 특정 위치로 바로 접근 가능.
+   * 실제 데이터 블록은 그대로 두고, 디렉터리 엔트리(이름 → 아이노드 매핑)만 수정.
+   * 파일 시스템 포맷이 다르기 때문에 아이노드나 블록 정보를 공유할 수 없음. 내부적으로 복사, 삭제.
