--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제2.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/yj/운영체제2.md
@@ -137,6 +137,20 @@
 
    * 장기 스케줄러, 중기 스케줄러, 단기 스케줄러.
 
+위치 : 작업(Job) → 준비 큐(Ready Queue)로 들어오는 단계.
+
+역할 : 어떤 작업을 메모리에 올려 프로세스로 만들지 결정.
+
+📌 2. 중기 스케줄러 (Medium-term Scheduler)
+
+위치 : 메모리에 있는 프로세스 ↔ 디스크(스왑 영역).
+
+역할 : 프로세스를 일시적으로 중지(suspend) → 디스크로 내보내거나 다시 불러오기.
+
+📌 3. 단기 스케줄러 (Short-term Scheduler)
+
+위치 : 준비 큐(Ready Queue) 안에서 실행 대기 중인 프로세스들.
+
 4. **가상 메모리를 사용하는 이유는 무엇인가요?**
 
    * 물리 메모리보다 큰 프로그램 실행, 프로세스 간 메모리 보호, 다중 작업 효율 향상.
