--- a/이것이 취업을 위한 컴퓨터 과학이다/5. Network/mc/CH05_네트워크.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/5. Network/mc/CH05_네트워크.md
@@ -1,4 +1,4 @@
-# CH04. 자료구조
+# CH05. 네트워크
 
 ## 목차
 
@@ -30,6 +30,9 @@
     노트북(클라이언트)이 구글의 서버 컴퓨터에게 웹 페이지를 가져다 달라는 요청을 보내면 구글의 서버 컴퓨터(서버)가 노트북에게 웹 페이지로 응답한다.
 - 그 외 노드 : 중간 역할을 하는 스위치와 라우터, 공유기
 
+- `프로토콜(protocol)` : 네트워크에서 통신을 주고받는 노드 간의 합의된 규칙이나 방법
+
+
 ### 네트워크 구분
 
 - `LAN(Local Area Network)`  
@@ -45,40 +48,41 @@
 
 `패킷 교환 네트워크` : 패킷 단위로 주고받는 정보를 쪼개서 송수신하고 수신지에서 재조립하며 패킷을 주고받는 네트워크
 
-`패킷packet` : 이렇게 네트워크를 통해 송수신되는 데이터의 단위  
- = `페이로드payload` + `헤더header` ( + `트레일러trailer` )
-
-페이로드는 패킷에서 송수신하고자 하는 데이터
-헤더와 트레일러는 패킷에 추가되는 부가 정보
-
+`패킷(packet)` : 이렇게 네트워크를 통해 송수신되는 데이터의 단위  
+`헤더(header)` : 패킷에 추가되는 부가 정보  
+<p style="text-align:center;">= `페이로드(payload)` + `헤더(header)` ( + `트레일러(trailer)` )</p>  
+ 
 ### 주소의 개념과 전송 방식
 
-`주소address` : 패킷의 헤더에 명시되는 정보 (`IP 주소`와 `MAC 주소`)
+`주소(address)` : 패킷의 헤더에 명시되는 정보 (`IP 주소`와 `MAC 주소`)
 
 - 주소를 바탕으로 다양한 수신지 유형을 지정해 패킷을 전송  
   수신지를 특정 호스트 하나로 지정할 수도 있고, 네트워크 내 모든 호스트로 지정할 수도 있다.
   - `유니캐스트(unicast)` : 송신지와 수신지가 일대일 통신
+
   - `브로드캐스트(broadcast)` : 네트워크상의 모든 호스트에게 메시지를 전송
+
     `브로드캐스트 도메인(broadcast domain)` : 브로드캐스트가 전송되는 범위  
+
      => 호스트가 같은 브로드캐스트 도메인에 속해 있는 경우에는 같은 LAN에 속해 있다고 간주
-  - `멀티캐스트(multicast)` : 네트워크 내의 동일 그룹에 속한 호스트에게만 전송 - `애니캐스트(anycast)` : 네트워크 내의 동일 그룹에 속한 호스트 중 가장 가까운 호스트에게 전송
 
-### 두 호스트가 패킷을 주고받는 과정
+  - `멀티캐스트(multicast)` : 네트워크 내의 동일 그룹에 속한 호스트에게만 전송
+  
+  - `애니캐스트(anycast)` : 네트워크 내의 동일 그룹에 속한 호스트 중 가장 가까운 호스트에게 전송
 
-`프로토콜(protocol)` : 네트워크에서 통신을 주고받는 노드 간의 합의된 규칙이나 방법  
-네트워크에서는 여러 프로토콜을 함께 사용
 
 ### 네트워크 참조 모델
 
-`네트워크 참조 모델network reference model`  
-: 통신이 이루어지는 단계를 계층적으로 표현한 모델  
-패킷을 송신하는 쪽에서는 상위 계층에서 하위 계층으로 정보를 보내고, 패킷을 수신하는 쪽에서는 하위 계층에서 상위 계층으로 정보를 받아들이게 되는 것이죠.
+`네트워크 참조 모델(network reference model)`  
+- 통신이 이루어지는 단계를 계층적으로 표현한 모델  
+
+- 패킷을 송신하는 쪽에서는 상위 계층에서 하위 계층으로 정보를 보내고, 패킷을 수신하는 쪽에서는 하위 계층에서 상위 계층으로 정보를 받아들이게 되는 것이죠.
 
 ### OSI 7계층과 TCP/IP 4계층 비교표
 
-| OSI 7계층        | TCP/IP 4계층             | 설명                                            |
-| ---------------- | ------------------------ | ----------------------------------------------- | --- |
-| 응용 계층        | 응용 계층                | 사용자 인터페이스 및 응용 프로그램과의 상호작용 | ... |
+| OSI 7계층        | TCP/IP 4계층 | 설명 |
+| ---------------- | ------------------ | ----------- |
+| 응용 계층        | 응용 계층                | 사용자 인터페이스 및 응용 프로그램과의 상호작용 |
 | 표현 계층        | ...                      | 데이터 형식, 인코딩, 암호화 등                  |
 | 세션 계층        | ...                      | 세션 설정, 유지 및 종료                         |
 | 전송 계층        | 전송 계층                | 종단 간 연결, 오류 제어, 흐름 제어 (TCP/UDP)    |
@@ -86,58 +90,56 @@
 | 데이터 링크 계층 | 네트워크 인터페이스 계층 | 물리적 주소(MAC), 프레임 전송, 오류 감지        |
 | 물리 계층        |                          | 전기적 신호, 케이블, 커넥터 등 물리적 전송 매체 |
 
-> 💡 **참고**: TCP/IP 모델은 OSI보다 간략화되어 있고, 상위 3계층(응용/표현/세션 계층)은 TCP/IP의 "응용 계층"에 통합됩니다.
+> `+` 참고: TCP/IP 모델은 OSI보다 간략화되어 있고, 상위 3계층(응용/표현/세션 계층)은 TCP/IP의 "응용 계층"에 통합됩니다.
 
 `OSI Model`(7계층)
 
-- `물리 계층physical layer`
-  비트 신호(0과 1만으로 이루어진 신호)를 유무선 통신 매체를 통해 운반하는 계층  
-   패킷의 이름 : 심볼(symbol) 또는 비트(bit)
+- `물리 계층(physical layer)`
+    - 비트 신호(0과 1만으로 이루어진 신호)를 유무선 통신 매체를 통해 운반하는 계층  
+    - 패킷의 이름 : 심볼(symbol) 또는 비트(bit)
 
-- `데이터 링크 계층data link layer`  
-   같은 LAN에 속한 호스트끼리 올바르게 정보를 주고받기 위한 계층  
-   같은 네트워크에 속한 호스트를 식별할 수 있는 주소(MAC 주소)를 사용  
-   물리 계층을 통해 주고받는 정보에 오류가 없는지 확인
-  패킷의 이름 : 프레임(frame)
+- `데이터 링크 계층(data link layer)`  
+    - 같은 LAN에 속한 호스트끼리 올바르게 정보를 주고받기 위한 계층  
+    - 같은 네트워크에 속한 호스트를 식별할 수 있는 주소(MAC 주소)를 사용  
+    - 물리 계층을 통해 주고받는 정보에 오류가 없는지 확인
+    - 패킷의 이름 : 프레임(frame)
 
-  => 물리 계층과 데이터 링크 계층은 서로 밀접하게 연관된 계층이며, 하드웨어와 밀접하게 맞닿아 있는 계층
+    => 물리 계층과 데이터 링크 계층은 서로 밀접하게 연관된 계층이며, 하드웨어와 밀접하게 맞닿아 있는 계층
 
-- `네트워크 계층network layer`  
-   네트워크 간 통신을 가능하게 하는 계층
-  데이터 링크 계층이 기본적으로 같은 LAN에 속한 호스트끼리 올바르게 정보를 주고받기 위해 필요한 계층이라면, 네트워크 계층은 LAN을 넘어 다른 네트워크와 통신을 주고받기 위해 필요한 계층
-  => 네트워크 간 통신 과정에서 호스트를 식별할 수 있는 주소(IP 주소)가 필요하죠.
-  패킷의 이름 : 패킷(이하 IP 패킷) 또는 데이터그램
-  대표 프로토콜 : IP
+- `네트워크 계층(network layer)`  
+    - 네트워크 간 통신을 가능하게 하는 계층
+    - 데이터 링크 계층이 기본적으로 같은 LAN에 속한 호스트끼리 올바르게 정보를 주고받기 위해 필요한 계층이라면, 네트워크 계층은 LAN을 넘어 다른 네트워크와 통신을 주고받기 위해 필요한 계층
+    - => 네트워크 간 통신 과정에서 호스트를 식별할 수 있는 주소(IP 주소)가 필요하죠.
+    - 패킷의 이름 : 패킷(이하 IP 패킷) 또는 데이터그램
+    - 대표 프로토콜 : IP
 
-- `전송 계층transport layer`
-  신뢰성 있는 전송을 가능하게 하는 계층  
-  `포트(port)` 정보를 통해 특정 응용 프로그램과의 연결 다리 역할을 수행하는 계층  
-  패킷의 이름 : TCP 기반(세그먼트) UDP 기반 (데이터그램)  
-  대표 프로토콜 : TCP와 UDP
+- `전송 계층(transport layer)`
+    - 신뢰성 있는 전송을 가능하게 하는 계층  
+    - `포트(port)` 정보를 통해 특정 응용 프로그램과의 연결 다리 역할을 수행하는 계층  
+    - 패킷의 이름 : TCP 기반(세그먼트) UDP 기반 (데이터그램)  
+    - 대표 프로토콜 : TCP와 UDP
 
-- `세션 계층session layer`  
-   `세션session`(응용 프로그램 간의 연결 상태)을 관리하기 위한 계층  
-  응용 프로그램 간의 연결 상태를 유지하거나 새롭게 생성하고, 필요하다면 연결을 끊는다.  
-   이 이상의 계층에서는 패킷의 이름 : 데이터 또는 매시지
+- `세션 계층(session layer)`  
+    - `세션(session)`(응용 프로그램 간의 연결 상태)을 관리하기 위한 계층  
+    - 응용 프로그램 간의 연결 상태를 유지하거나 새롭게 생성하고, 필요하다면 연결을 끊는다.  
+    - 이 이상의 계층에서는 패킷의 이름 : 데이터 또는 메시지
 
-- `표현 계층presentation layer`
+- `표현 계층(presentation layer)`
   인코딩과 압축, 암호화와 같은 작업을 수행  
   => 세션 계층과 표현 계층은 다른 계층과 달리, 두 계층을 명확하게 구분하지 않거나 응용 계층에 포함하여 간주하는 경우가 많다.
 
-- `응용 계층application layer`
+- `응용 계층(application layer)`
   사용자와 가장 밀접하게 맞닿아 있어 여러 네트워크 서비스를 제공하는 계층  
   중요한 프로토콜들이 다수 포함  
    대표 프로토콜 : HTTP, HTTPS, DNS
 
 `TCP/IP Model` (4계층)
 
-`네트워크 액세스 계층network access layer`
-링크 계층link layer 또는 네트워크
-인터페이스 계층network interface layer이라고도 부르는데, 이는
-
-`인터넷 계층internet layer`은 OSI 모델의 네트워크 계층과 유사하며,
-`전송 계층transport layer`은 OSI 모델의 전송 계층,
-`응용 계층application layer`은 OSI 모델의 세션 계층, 표현 계층, 응용 계층을 합친 것과 유사
+- `네트워크 액세스 계층(network access layer)`
+- 링크 계층(link layer) 또는 네트워크 인터페이스 계층(network interface layer)이라고도 부른다.
+    - `인터넷 계층(internet layer)`은 OSI 모델의 네트워크 계층과 유사하며,
+    - `전송 계층(transport layer)`은 OSI 모델의 전송 계층,
+    - `응용 계층(application layer)`은 OSI 모델의 세션 계층, 표현 계층, 응용 계층을 합친 것과 유사
 
 ### 캡슐화와 역캡슐화
 
@@ -154,8 +156,7 @@
 `역캡슐화(decapsulation)` : 수신 과정에서 캡슐화 과정에서 붙인 헤더(및 트레일러)를 각 계층에서 확인한 뒤 제거하는 과정
 
 ### 네트워크 지도 그리기
-
-363페이지 참고
+(363페이지 참고)
 
 <div style="display:flex; ">
     <div style="flex:1">
@@ -203,7 +204,7 @@
 
 ### `이더넷(Ethernet)`
 
-- LAN 내의 호스트들이 올바르게 정보를 주고받을 수 있게 해주는 다양한 기술 중 하나
+- LAN 내의 호스트들이 올바르게 정보를 주고받을 수 있게 해주는 기술 표준(설계도와 같은 것)
 
 > `이더넷 표준`  
 > 오늘날의 (유선)LAN 대부분이 이더넷 표준을 따르기 때문에 대다수의 LAN 장비들이 특정 이더넷 표준(IEEE 802.3)을 따른다.
